# fyp_event_extraction

./: .gitignore  CLAUDE.md  Procfile  README.md  chapter4.md  config.py  docker-compose.yml  env.example  event_types_db.json  explanation.md  lloom.ipynb  main.py  main_batches.py  mindmap.py  plan.md  progress.md  pyproject.toml  requirements.txt  run_on_input.py  run_system.sh  synthesize_findings.py  theoretical.md
backend_service/: .env.example  README.md  requirements.txt
backend_service/app/: component_runner.py  contradiction_detector.py  graph_builder.py  main.py  models.py  pipeline_steps.py  runner.py  settings.py  store.py
backend_service/app/static/: graph.html  index.html
lloom/text_lloom/src/text_lloom/: workbench.py
