[project]
name = "hamza-event-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget==0.9.7",
    "fastapi==0.116.0",
    "google-genai==1.29.0",
    "google-generativeai==0.8.6",
    "hdbscan>=0.8.33",
    "ipywidgets==8.1.2",
    "jupyterlab-widgets==3.0.15",
    "nltk>=3.8.1",
    "numba>=0.60.0",
    "numpy>=1.23.5",
    "pandas==2.3.2",
    "pathos>=0.3.0",
    "protobuf>=4.25.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml>=6.0",
    "requests>=2.28.2",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.1",
    "traitlets>=5.14.1",
    "umap-learn>=0.5.5",
    "uvicorn==0.38.0",
    "yaspin>=3.0.2",
]
